Secured Cloud Transfers

--- a/site/public/welcome.html
+++ b/site/public/welcome.html
@@ -23,7 +23,7 @@
   </body>
   <script src="https://sdk.amazonaws.com/js/aws-sdk-2.1.13.min.js"></script>
   <script type="text/javascript">
-AWS.config.update({accessKeyId: 'AKIAIS77GEI36OW6VKSA', secretAccessKey: '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'});
+AWS.config.update({accessKeyId: 'access-key', secretAccessKey: 'secretkey'});
 AWS.config.region = 'us-west-2';
 /*new AWS.S3().listObjects({Bucket: 'tootoo'}, function(error, data) {
   if (error) {
