Time out condition added

--- a/site/public/responses/testuser26_response.html
+++ b/site/public/responses/testuser26_response.html
@@ -12,3 +12,9 @@ contest02 problem02 ACC 2015-04-28 15:25:20 +0530<br>
 contest02 problem02 ACC 2015-04-28 15:28:29 +0530<br>
 contest02 problem02 ACC 2015-04-28 15:30:03 +0530<br>
 contest02 problem02 ACC 2015-04-28 15:30:36 +0530<br>
+contest02 problem02 COMPILATION 2015-04-28 15:39:22 +0530<br>
+contest02 problem02 COMPILATION 2015-04-28 15:43:39 +0530<br>
+contest02 problem02 ACC 2015-04-28 15:39:22 +0530<br>
+contest02 problem02 ACC 2015-04-28 15:43:39 +0530<br>
+contest02 problem02 ACC 2015-04-28 16:26:56 +0530<br>
+contest02 problem02 ACC 2015-04-28 16:32:28 +0530<br>
