Link for static quality check added

--- a/site/public/responses/testuser35_response.html
+++ b/site/public/responses/testuser35_response.html
@@ -11,3 +11,20 @@ contest02 problem02 COMPILATION 2015-05-29 15:48:33 +0530<br>
 contest02 problem02 ACC 2015-05-29 15:51:10 +0530<br>
 contest02 problem02 CE 2015-05-29 15:53:40 +0530<br>
 contest02 problem02 RE 2015-05-29 15:56:17 +0530<br>
+JUN15 SIMMAT WA 2015-05-31 16:24:52 +0530<br>
+JUN15 SIMMAT WA 2015-05-31 16:27:37 +0530<br>
+JUN15 SIMMAT WA 2015-05-31 16:30:16 +0530<br>
+JUN15 SIMMAT ACC 2015-05-31 16:41:21 +0530<br>
+JUN15 SIMMAT COMPILATION 2015-05-31 19:08:43 +0530<br>
+JUN15 SIMMAT COMPILATION 2015-05-31 19:11:22 +0530<br>
+JUN15 SIMMAT COMPILATION 2015-05-31 19:13:36 +0530<br>
+JUN15 SIMMAT ACC 2015-05-31 19:15:41 +0530<br>
+JUN15 SIMMAT ACC 2015-05-3119:15:41+0530<br>
+JUN15 SIMMAT ACC 2015-05-3119:15:41+0530<br>
+JUN15 SIMMAT COMPILATION 2015-05-31 19:23:21 +0530<br>
+JUN15 SIMMAT ACC 2015-05-31 19:25:37 +0530<br>
+JUN15 SIMMAT ACC 2015-05-31 19:28:32 +0530<br>
+JUN15 SIMMAT ACC 2015-05-31 19:30:40 +0530<br>
+JUN15 SIMMAT ACC 2015-05-31 19:35:15 +0530<br>
+JUN15 SIMMAT COMPILATION 2015-05-31 19:40:03 +0530<br>
+JUN15 SIMMAT ACC 2015-05-31 19:45:51 +0530<br>
