--- a/site/public/qualityresponses/testuser35_response.html
+++ b/site/public/qualityresponses/testuser35_response.html
@@ -1,4 +1,3 @@
-Static Code Analysis Report<br>
-[cppsubmissions/testuser35#2015-05-2916:35:17+0530#.cpp:32]: (style) Variable p is not assigned a value<br>
-[cppsubmissions/testuser35#2015-05-2916:35:17+0530#.cpp:33]: (error) Uninitialized variable: p<br>
-[cppsubmissions/testuser35#2015-05-2916:35:17+0530#.cpp:30]: (style) The function f is never used<br>
+[cppsubmissions/testuser35#2015-05-3119:44:44+0530#.cpp:21]: (error) Array arr[2] index 2 out of bounds<br>
+[cppsubmissions/testuser35#2015-05-3119:44:44+0530#.cpp:21]: (error) Division by zero<br>
+[cppsubmissions/testuser35#2015-05-3119:44:44+0530#.cpp:6]: (style) The function gcd is never used<br>
